:bug: Fixes not being able to search in filters, broken in last commit

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -123,7 +123,7 @@ tr {
 }
 
 hr.under-header {
-  margin-top: 6em;
+  margin-top: 8em;
   margin-bottom: 2em;
 }
 // PAGINATION \\
